fix overflow

--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -44,6 +44,7 @@ h2 {
   padding: 5px 0;
   font-size: 15px;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 .table .td:last-child {
